@@ -94,9 +94,9 @@ dfsg-free:
 	rm -f ./src/libs/xpcom18a4/xpcom/MoreFiles/FSCopyObject.c
 	rm -f ./src/libs/xpcom18a4/xpcom/MoreFiles/FSCopyObject.h
 	rm -rf ./debian/
-	find . -type d -name '.svn' |xargs rm -rf;
-	( cd .. & mv Virtualbox-OSE-1.5.0 virtualbox-ose-1.5.0-dfsg & \
-		tar cfz --exclude=debian/ virtualbox-ose-1.5.0-dfsg.orig.tar.gz virtualbox-1.5.0-dfsg )
+	find . -type d -name '.svn' | xargs rm -rf;
+	cd .. && mv VirtualBox-1.5.0_OSE virtualbox-ose-1.5.0-dfsg && \
+		tar cfz virtualbox-ose_1.5.0-dfsg.orig.tar.gz virtualbox-ose-1.5.0-dfsg
 
 install: DH_OPTIONS=
 install: build
